--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -147,7 +147,7 @@
                     <% if(uniqueCategories && uniqueCategories.length > 0) { %>
                       <% uniqueCategories.forEach(function(category) { %>
                         <li class="main-nav-list mt-2 mb-2">
-                          <a href="/shop?category=<%= encodeURIComponent(category) %>">
+                          <a href="#" class="category-link" data-category="<%= category %>">
                             <span class="text-capitalize text-center"><%= category %></span>
                           </a>
                         </li>
@@ -159,60 +159,48 @@
                 <div class="common-filter">
                     <div class="head" style="background-color: #ff6c00;color: #fff;">Genders</div>
                     <ul>
-                        <li class="main-nav-list text-capitalize mt-2 mb-2 border-bottom shadow-sm py-3">
-                            <a href="/shop?gender=mens" class="mx-4" style="color: #292929;text-decoration: none;">
+                        <li class="main-nav-list text-capitalize mt-2 mb-2 border-bottom shadow-sm py-3"
+                            style="background-color: <%= (query.gender === 'mens') ? '#ff6c00' : 'transparent' %>;">
+                            <a href="/shop?gender=mens" class="mx-4" 
+                               style="color: <%= (query.gender === 'mens') ? '#ffff' : '#292929' %>; text-decoration: none;">
                                 <span>Mens</span>
                             </a>
                         </li>
-                        <li class="main-nav-list text-capitalize mt-2 mb-2 border-bottom shadow-sm py-3">
-                            <a href="/shop?gender=womens" class="mx-4" style="color: #292929;text-decoration: none;">
+                        <li class="main-nav-list text-capitalize mt-2 mb-2 border-bottom shadow-sm py-3"
+                            style="background-color: <%= (query.gender === 'womens') ? '#ff6c00' : 'transparent' %>;">
+                            <a href="/shop?gender=womens" class="mx-4" 
+                               style="color: <%= (query.gender === 'womens') ? '#ffff' : '#292929' %>; text-decoration: none;">
                                 <span>Women's</span>
                             </a>
                         </li>
                     </ul>
-                </div>
-                <div class="common-filter mt-4">
-                    <div class="head" style="background-color: #ff6c00;color: #ffff;">Color</div>
-                    <ul>
-                        <% if(uniqueColor && uniqueColor.length > 0) { %>
-                            <% uniqueColor.forEach(function(color) { %>
-                                <li class="main-nav-list text-capitalize mt-2 mb-2 border-bottom shadow-sm py-3">
-                                    <a href="/shop?color=<%= encodeURIComponent(color) %>" class="mx-4" style="color: #292929;text-decoration: none;">
-                                        <span class="text-capitalize text-center"><%= color %></span>
-                                    </a>
-                                </li>
-                            <% }) %>
-                        <% } %>
-                    </ul>
+                    
                 </div>
                 <div class="common-filter">
-                    <div class="head" style="background-color: #ff6c00;color: #ffff;">Size</div>
+                    <div class="head" style="background-color: #ff6c00;color: #ffff;">Brands</div>
                      <ul>
-                        <li class="main-nav-list text-capitalize mt-2 mb-2 border-bottom shadow-sm py-3">
-                            <a href="/shop?size=uk8" class="mx-4" style="color: #292929;text-decoration: none;">
-                                <span class="text-capitalize text-center">Uk 8</span>
+                        <li class="main-nav-list text-capitalize mt-2 mb-2 border-bottom shadow-sm py-3"
+                        style="background-color: <%= (query.brand === 'nike') ? '#ff6c00' : 'transparent' %>;">
+                            <a href="/shop?brand=nike" class="mx-4" 
+                             style="color: <%= (query.brand === 'nike') ? '#ffff' : '#292929' %>; text-decoration: none;">
+                                <span class="text-capitalize text-center">nike</span>
                             </a>
                         </li> 
-                        <li class="main-nav-list text-capitalize mt-2 mb-2 border-bottom shadow-sm py-3">
-                            <a href="/shop?size=uk10" class="mx-4" style="color: #292929;text-decoration: none;">
-                                <span class="text-capitalize text-center">Uk 10</span>
+                        <li class="main-nav-list text-capitalize mt-2 mb-2 border-bottom shadow-sm py-3"
+                        style="background-color: <%= (query.brand === 'adidas') ? '#ff6c00' : 'transparent' %>;">
+                            <a href="/shop?brand=adidas" class="mx-4" 
+                            style="color: <%= (query.brand === 'adidas') ? '#ffff' : '#292929' %>; text-decoration: none;">
+                                <span class="text-capitalize text-center">adidas</span>
                             </a>
                         </li> 
-                        <li class="main-nav-list text-capitalize mt-2 mb-2 border-bottom shadow-sm py-3">
-                            <a href="/shop?size=uk12" class="mx-4" style="color: #292929;text-decoration: none;">
-                                <span class="text-capitalize text-center">Uk 12</span>
+                        <li class="main-nav-list text-capitalize mt-2 mb-2 border-bottom shadow-sm py-3"
+                        style="background-color: <%= (query.brand === 'puma') ? '#ff6c00' : 'transparent' %>;">
+                            <a href="/shop?brand=puma" class="mx-4" 
+                            style="color: <%= (query.brand === 'puma') ? '#ffff' : '#292929' %>; text-decoration: none;">
+                                <span class="text-capitalize text-center">puma</span>
                             </a>
                         </li>
-                        <li class="main-nav-list text-capitalize mt-2 mb-2 border-bottom shadow-sm py-3">
-                            <a href="/shop?size=uk14" class="mx-4" style="color: #292929;text-decoration: none;">
-                                <span class="text-capitalize text-center">Uk 14</span>
-                            </a>
-                        </li>
-                        <li class="main-nav-list text-capitalize mt-2 mb-2 border-bottom shadow-sm py-3">
-                            <a href="/shop?size=uk16" class="mx-4" style="color: #292929;text-decoration: none;">
-                                <span class="text-capitalize text-center">Uk 16</span>
-                            </a>
-                        </li>
+                       
                      </ul>
                 </div>
             </div>
@@ -220,18 +208,23 @@
         <div class="col-xl-9 col-lg-8 col-md-7">
             <section class="lattest-product-area pb-40 category-list">
                 <div class="row flex-wrap shadow" style="height: 78em;">
-                    <% if(products && products.length > 0) { %>
+                    <% if(products && products.length >= 0) { %>
                         <% products.forEach(function(product) { %>
-                            <div class="col-4 single-product shadow mx-5 my-3" style="width: 250px;height: 403px;">
+
+                        <% if(product?.deleted===false){ %>
+                            <div class="col-4 single-product shadow mx-5 my-3 border border-danger" style="width: 250px;height: 480px;">
                                 <a href="/productDetails/<%= encodeURIComponent(product._id) %>">
-                                    <img class="img-fluid" src="<%= product.variants[0]?.imageUrls[0] %>" alt="img">
+                                    <img class="img-fluid" src="<%= product?.variants[0]?.imageUrls[0] %>" alt="img">
                                 </a>
                                 <div class="product-details">
-                                    <h6><%= product.name %></h6>
+                                    <h6><%= product?.name %></h6>
                                     <div class="price">
-                                        <h6>₹<%= product.price %></h6>
-                                        <h6 class="l-through">₹<%= product.price + 5000 %></h6>
+                                        <h6>₹<%= product?.price %></h6>
+                                        <h6 class="l-through">₹<%= product?.price + 5000 %></h6>
                                     </div>
+                                    <h6>Gender: <%=product?.gender  %></h6>
+                                    <h6>Category: <%=product?.category?.name  %></h6>
+                                    <h6>band: <%=product?.brand  %></h6>
                                     <div class="prd-bottom d-flex justify-content-around align-items-center">
                                         <a href="/productDetails/<%= encodeURIComponent(product._id) %>">
                                             <button class="btn">
@@ -245,6 +238,7 @@
                                     </div>
                                 </div>
                             </div>
+                            <% } %>
                         <% }) %>
                     <% } else { %>
                         <p class="text-center m-auto fa-2x"><b>No products found.</b></p>
@@ -306,6 +300,44 @@
     <!-- End footer Area -->
 
     <script>
+
+document.addEventListener('DOMContentLoaded', function() {
+    const categoryLinks = document.querySelectorAll('.category-link');
+    const selectedCategories = new Set();
+
+    categoryLinks.forEach(link => {
+      link.addEventListener('click', function(e) {
+        e.preventDefault();
+        const category = this.getAttribute('data-category');
+        
+        if (selectedCategories.has(category)) {
+          selectedCategories.delete(category);
+          this.classList.remove('active');
+        } else {
+          selectedCategories.add(category);
+          this.classList.add('active');
+        }
+
+        // Update the URL with selected categories
+        const searchParams = new URLSearchParams(window.location.search);
+        searchParams.set('category', Array.from(selectedCategories).join(','));
+        window.location.search = searchParams.toString();
+      });
+    });
+  });
+      
+
+
+
+
+
+
+
+
+
+
+
+
         $(document).ready(function () {
             // Show search input box when search button is clicked
             $('.search').on('click', function (e) {
